--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: '3.9'
       - name: Install Python dependencies
-        run: python -m pip install pip pandas
+        run: python -m pip install --upgrade pip
       - name: Use pip Cache  
         uses: actions/cache@v2
         with:
@@ -28,7 +28,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
       - name: Install Python tools
-        run: pip install ReadActor frictionless csvkit      
+        run: pip install ReadActor pandas frictionless csvkit    
       - name: Validate input CSV Files
         working-directory: csv
         run: frictionless validate datapackage.json        
@@ -44,7 +44,7 @@ jobs:
       - name: Validate Ouput CSV Files
         working-directory: csv
         run: frictionless validate datapackage.json           
-      - name: Generate XML Files\
+      - name: Generate XML Files
         run: |
           basex xml/modules/tei-bibl.xq > xml/listBibl.xml
           basex xml/modules/tei-org.xq > xml/listOrg.xml
@@ -62,48 +62,7 @@ jobs:
           name: markup-xi
           path: |
             xml/*.xml
-            xml/*.gexf  
-  # test:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 1    
-  #     - name: Setup Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.9'
-  #     - name: Use pip Cache  
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.cache/pip
-  #         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-pip-        
-  #     - name: Install Test Dependencies
-  #       run: | 
-  #         sudo apt-get update 
-  #         sudo apt-get install -y libxml2-utils 
-  #         pip install frictionless csvkit
-  #     - name: Validate output CSV Files
-  #       working-directory: csv
-  #       run: frictionless validate datapackage.json    
-  #     - name: Download Artifact
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: markup-xi
-  #         path: xml  
-      # (DP) for debugging
-      # - name: Display Downloaded Artifacts
-      #   run: ls -R
-      # - name: Display xmllint version
-      #   run: xmllint --version 
-      # - name: Validate XML Files
-      #   run: | 
-      #     xmllint --noout --xinclude --relaxng xml/schema/tei_all.rng xml/tei_header.xml  
-      #     xmllint --noout --relaxng xml/schema/gexf.rng xml/rActs.gexf         
+            xml/*.gexf         
   release:
     runs-on: ubuntu-latest
     needs: build
